--- a/gradle.properties
+++ b/gradle.properties
@@ -42,4 +42,4 @@ mod_group_id=hibi.blahaj
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors="hibi","infoplayerstart","DaFuqs","LadyStrella"
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Simple Mod expanding the use for certain minecraft features.
+mod_description=Fluffy Blahaj
